# Homework_30_PD12

./: README.md  manage.py  pyproject.toml
Homework_30_PD12/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_advertisement_image.py
authentication/: models.py  permissions.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_alter_user_age.py
data/: create_fill_database.py
data/raw_data/: csv_convert.py
locations/: permissions.py  views.py
locations/migrations/: 0001_initial.py
selections/: models.py  permissions.py  serializers.py  views.py
selections/migrations/: 0001_initial.py
